[package]
authors = ["Jacob Brown <kardeiz@gmail.com>"]
name = "awmp"
version = "0.4.1"
description = "An easy to use wrapper around multipart/form-data for Actix web"
keywords = ["actix", "actix-web", "multipart"]
license = "MIT"
repository = "https://github.com/kardeiz/awmp"
readme = "README.md"
edition = "2018"
documentation = "https://docs.rs/awmp"

[features]
default = ["v1"]
v1 = ["actix-web-v1"]

[dependencies]
actix-web-v1 = { version = "1", package = "actix-web", optional = true }
actix-web-v2 = { version = "2", package = "actix-web", optional = true }
actix-multipart = "0.1"
futures = "0.1"
mime = "0.3"
mime_guess = "2"
tempfile = "3.1"
url = "2"
flate2 = "1"
bytes = "0.4"
sanitize-filename = "0.2"

[dependencies.uuid]
features = ["v4"]
version = "0.7"
